Fixed x overflow

--- a/company-registration/src/assets/style/style.css
+++ b/company-registration/src/assets/style/style.css
@@ -219,6 +219,7 @@ div.warning{
     height: fit-content;
     /* padding: 2% 4% 2% 4%; */
     overflow-y: auto;
+    overflow-x: hidden;
     margin-bottom: 2%;
 }
 
